tests/baselines/reference/S7.8.3_A6.2_T1.errors.txt
S7.8.3_A6.2_T1.ts(15,3): error TS1125: Hexadecimal digit expected.
S7.8.3_A6.2_T1.ts(15,3): error TS2304: Cannot find name 'G'.


==== S7.8.3_A6.2_T1.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: 0xG is incorrect
    es5id: 7.8.3_A6.2_T1
    description: Checking if execution of "0xG" fails
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    0xG
      
!!! error TS1125: Hexadecimal digit expected.
      ~
!!! error TS2304: Cannot find name 'G'.
    